--- a/bicicletas/index.html
+++ b/bicicletas/index.html
@@ -44,10 +44,18 @@
                                 Inicio
                             </a>
                         </li>
-                        <li class="nav-item mb-0 mr-2">
-                            <a href="../index.html" class="nav-link text-white">
-                                Ciudad
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Málaga
                             </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="index.html?ciudad=malaga">Màlaga</a>
+                                <a class="dropdown-item" href="index.html?ciudad=sevilla">Sevilla</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="index.html?ciudad=barcelona">Barcelona</a>
+                                <a class="dropdown-item" href="index.html?ciudad=bilbao">Bilbao</a>
+                                <a class="dropdown-item" href="index.html?ciudad=madrid">Madrid</a>
+                            </div>
                         </li>
                         <li class="nav-item mb-0 mr-2">
                             <a href="#rutas" class="nav-link text-white">
@@ -524,7 +532,7 @@
     <!-- rutas-->
 
     <footer>
-        <div class="container-fluid py-3 mt-5">
+        <div class="container-fluid">
             <div class="row pt-2 pb-2 bg-dark text-white">
                 <div class="col-md-3 text-center">
                     <ul>
