--- a/bicicletas/index.html
+++ b/bicicletas/index.html
@@ -30,7 +30,7 @@
             <div class="container text-center">
                 <a href="../index.html" class="navbar-brand">
                     <img class="nav-logo"
-                    src="../img/logo-negativo.bythebike.png" 
+                    src="../img/logo-bythebike.png" 
                     alt="Logo de ByRossyBike">
                     <p class="nombre-empresa text-white mb-0 pt-1">ByRossyBike</p>
                 </a>
