--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 
 <body>
    
-<section id="start" class="bg-primary">
+<section id="start" class="bg-info" >
         <div id="container" class="container">
+           <video src="img/fondo-video2.mp4" autoplay muted loop></video>
             <div class="row text-white">
                 <div class="col-sm-10 offset-sm-1 text-center">
                     <h1 class="mt-3 mb-3 mt-md-5 mb-md-5">ByRossyBike<br>
